--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,6 +28,17 @@
       margin-left: auto;
       font-size: 36px;
     }
+
+    .test-warning {
+      text-align: center;
+      margin: 40px 0;
+      font-size: 24px;
+      color: red;
+    }
+
+    button {
+      margin-left: auto;
+    }
   }
   
   
